# rust-bio-tools

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  test-consensus.2.fastq
.github/: dependabot.yml
.github/workflows/: conventional-prs.yml  release-please.yml  rust.yml
src/: cli.rs  cli.yaml  common.rs  errors.rs  main.rs  phylogeny.rs  sequences_stats.rs
src/bam/: anonymize_reads.rs  depth.rs  group_by_dbr.rs  group_by_umi.rs  mod.rs  simulate_reads.rs
src/bam/call_consensus_reads/: calc_consensus.rs  mod.rs  pipeline.rs
src/bam/collapse_reads_to_fragments/: calc_consensus.rs  mod.rs  (+1 more)
src/bcf/: annotate_dgidb.rs  baf.rs  fix_iupac_alleles.rs  match_variants.rs  mod.rs  oncoprint.html.tera  oncoprint.rs  split.rs  to_txt.rs
src/common_functions/: mod.rs
src/csv/: csv_report.css  csv_report.html.tera  csv_report.js  csv_report.js.tera  data.js.tera  lookup_table.html.tera  mod.rs  plot.html.tera  plot.js.tera  prefix_table.html.tera  report.rs
src/fastq/: call_consensus_reads.rs  filter.rs  mod.rs  pipeline.rs  reformat_fastq_header.rs  split.rs
templates/: oncoprint.html.tera
tests/: annotate_dgidb_test.vcf  lib.rs  oscar_age_female.csv  overlapping-consensus.1.fastq  overlapping-consensus.2.fastq  overlapping_consensus_marked.bam  pos.txt  ref.fa  ref.fa.fai  report-test.vcf  report-test.vcf.gz.tbi  stats.fasta  stats.fastq  test-consensus.fastq  test-freebayes.vcf  test-group-umi.bam  test-iupac.vcf  test-oncoprint.vcf  test-report.bam  test-report.bam.bai  test-vcf-split-chain.vcf  test-vcf-split.vcf  test-with-filter.vcf  test.fastq  test.vcf  test2.vcf  test3.vcf  test4.vcf
tests/expected/: A.fastq  B.fastq  annotate_dgidb_drugbank_test.bcf  annotate_dgidb_test.bcf  annotate_dgidb_test.vcf  baf.bcf  bam_consensus_r1.fq  bam_consensus_r2.fq  bam_consensus_se.fq  depth.txt  iupac-fixed.bcf  matching-same.bcf  matching.bcf  oncoprint.html  overlapping-consensus.fastq  overlapping_consensus_mapped.bam  overlapping_consensus_marked.bam  report.html  result.fastq.stats  test-consensus.1.fastq  test-consensus.2.fastq  test-consensus_single.1.fastq  test-consensus_single.2.fastq  test_overlapping-consensus.1.fastq  test_overlapping-consensus.2.fastq  test_overlapping-consensus.3.fastq  variant-table-with-filter.txt  variant-table.txt  vcf-split-chain1.bcf  vcf-split-chain2.bcf  vcf-split1.bcf  vcf-split2.bcf
tests/pseudobam-fix-cigars/: mini.fa  mini.fa.fai  mini.sorted.bam  mini.sorted.bam.bai
(+76 files in other folders)
