[package]
name = "rust-bio-tools"
version = "0.1.2"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "A set of fast and robust command line utilities for bioinformatics tasks based on Rust-Bio."
license-file = "LICENSE.md"
homepage = "https://github.com/rust-bio/rust-bio-tools"

[dependencies]
bio = "0.10.*"
clap = {version = "2.9.*", features = ["yaml", "color", "suggestions"]}
itertools = "0.4.*"
log = "0.3.*"
fern = "0.3.*"
rust-htslib = "0.9.*"
csv = "0.14.*"
rustc-serialize = "0.3.*"
quick-error = "1.1.*"
newtype_derive = "0.1.*"
custom_derive = "0.1.*"

[[bin]]
name = "rbt"
path = "src/main.rs"
