[package]
name = "rust-bio-tools"
version = "0.2.8-alpha.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>", "Erik Clarke <ecl@pennmedicine.upenn.edu>"]
description = "A set of fast and robust command line utilities for bioinformatics tasks based on Rust-Bio."
license-file = "LICENSE.md"
homepage = "https://github.com/rust-bio/rust-bio-tools"

[dependencies]
bio = "0.14"
clap = { version = "2.27", features = ["yaml", "color", "suggestions"]}
itertools = "0.6"
log = "0.3"
fern = "0.4"
rust-htslib = "0.15"
csv = "0.15"
rustc-serialize = "0.3"
quick-error = "1.2"
newtype_derive = "0.1"
custom_derive = "0.1"

[[bin]]
name = "rbt"
path = "src/main.rs"
