[package]
name = "rust-bio-tools"
version = "0.9.3-alpha.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>", "Erik Clarke <ecl@pennmedicine.upenn.edu>"]
description = "A set of fast and robust command line utilities for bioinformatics tasks based on Rust-Bio."
license-file = "LICENSE.md"
homepage = "https://github.com/rust-bio/rust-bio-tools"
edition = "2018"
readme = "README.md"


[dependencies]
bio = "0.30"
clap = { version = "2.31", features = ["yaml", "color", "suggestions"]}
indicatif = "0.11"
itertools = "0.6"
log = "0.4.6"
fern = "0.5.7"
rust-htslib = "0.26"
csv = "1.0.2"
rustc-serialize = "0.3"
quick-error = "1.2"
newtype_derive = "0.1"
custom_derive = "0.1"
rand = "0.4"
cogset = "0.2"
num-bigint = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }
tempfile = "3.0"
rocksdb = "0.12"
ordered-float = "0.5"
flate2 = "1.0.5"
streaming-stats =  "0.2.2"
GSL = "1.1.0"
bio-types = ">=0.5.1"
derive-new = "0.5"
reqwest = "0.9"
regex = "1.3"

[[bin]]
name = "rbt"
path = "src/main.rs"


[features]
default = ["GSL/v2"]

